# ollama_telegram_bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: dispatcher.py
bot/handlers/: bot_settings.py  modes.py  start.py  text_input.py  unexpected_input.py
bot/helpers/: streaming_response.py
bot/services/: ollama.py
config/: .env.example  chat_modes.yml  config_loader.py
database/: bot_database.py
docker/: Dockerfile.dev  docker-compose.yml
