[tool.poetry]
name = "ollama-telegram-botx"
version = "0.1.0"
description = "Chat with large language models (LLMs) right from your phone using this amazing Telegram bot."
authors = ["Coding Wizard <coding_wizard@hacknexus.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
aiohttp = "^3.10.5"
ollama = "^0.3.3"
motor = "^3.6.0"
pymongo = "^4.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
